[gd_scene load_steps=3 format=2]

[ext_resource path="res://GraphEditors/NodeTemplate/GraphNode.gd" type="Script" id=1]
[ext_resource path="res://Misc/theme.tres" type="Theme" id=2]

[node name="Node" type="GraphNode"]
margin_right = 1.52588e-05
margin_bottom = 10.0
rect_min_size = Vector2( 211, 84 )
theme = ExtResource( 2 )
title = "Name"
show_close = true
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="close_request" from="." to="." method="_on_Node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Node_resize_request"]
